@@ -65,7 +65,7 @@ func DecodeEvent(input interface{}, err error) (*Event, error) {
 		Id:        decoder.StringPtr(raw, "id"),
 		Culprit:   decoder.StringPtr(raw, "culprit"),
 		Context:   decoder.MapStr(raw, "context"),
-		Timestamp: decoder.TimeRFC3339(raw, "timestamp"),
+		Timestamp: decoder.TimeRFC3339WithDefault(raw, "timestamp"),
 	}
 	transactionId := decoder.StringPtr(raw, "id", "transaction")
 	if transactionId != nil {
