@@ -1,6 +1,0 @@
-{
-    "id": "85915e55-b43f-4340-a8e0-df1906ecbfa9",
-    "type": "request",
-    "duration": 1.0,
-    "spans": []
-}
